fixed spacing problems among elements

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 header {
     background-color: rgb(78,160,255);
     height: 125px;
@@ -5,6 +10,10 @@ header {
     background-size: 400px;
 }
 
+.main-title {
+    margin-top: 2em;
+    margin-bottom: 2em;
+}
 
 #the-in-title {
     color: white;
@@ -33,9 +42,39 @@ address {
 }
 
 #date {
+    display: block;
     font-size: 15px;
+    margin-top: 0px;
+}
+
+.paragraph {
+    margin-top: 1em;
 }
 
 .enlighted {
     background-color: yellow;
+}
+
+ul {
+    margin-top: 1em;
+    margin-left: 1em;
+}
+
+table {
+    margin-top: 2em;
+}
+
+h3 {
+    margin-top: 2em;
+    color: rgb(128,128,128)
+}
+
+article {
+    display: block;
+}
+
+.related-post {
+    margin-top: 1em;
+    margin-bottom: 10px;
+    display: block;
 }
